# papajbadge-rs

./: Cargo.toml  Makefile  README.md  sysctl.md
ch58x/: README.md
ch58x/src/ch58x/: mod.rs
openocd/: README.md
src/: audio.rs  ble_periph.rs  flash.rs  helpers.rs  lib.rs  logger.rs  main.rs
src/ble_periph/: blinky_service.rs  current_time_service.rs  mod.rs
