[package]
name = "papajbadge-rs"
version = "0.2.136"
edition = "2021"
categories = ["embedded", "no-std"]
license = "MIT"

[features]
default = ["ble", "embassy"]
embassy = ["dep:embassy-sync"]
defmt = ["dep:defmt"]
ble = []

[dependencies]
ch58x = { path = "ch58x", features = ["ch58x", "rt"] }
ch58x-hal = "0.0.2"

critical-section = "1.1.2"
qingke = { version = "0.1.7", features = ["critical-section-impl"] }
qingke-rt = { version = "0.1.7", features = ["highcode"] }

fugit = "0.3.7"
nb = "1.1.0"

embedded-hal-local = { version = "1.0.0-rc.2", package = "embedded-hal" }

embassy-sync = { version = "0.5.0", optional = true }
defmt = { version = "1.0.1", optional = true }
panic-halt = "0.2.0"

[profile.dev]
lto = false
opt-level = 0

# [dev-dependencies]

# embassy-futures = "0.1.1"
# # embassy time driver
# heapless = "0.8.0"
# embedded-alloc = "0.5.0"
# embedded-sdmmc = "0.6.0"

[profile.release]
# panic = "unwind"
panic = "abort"
opt-level = "z"
lto = false
codegen-units = 1